--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
-language: node_js
-node_js:
-  - "0.11"
-  - "0.10"
+language: php
+php:
+  - 5.4
+  - 5.5
+  - 5.6
 before_script:
-  - npm install -g gulp
+  - npm install -g gulp gulp-concat gulp-uglify
 script: gulp
